--- a/Lecture 3/Lecture 3/Views/Student/Edit.cshtml
+++ b/Lecture 3/Lecture 3/Views/Student/Edit.cshtml
@@ -1,10 +1,7 @@
 ﻿@model Lecture_3.Models.Entities.Student
-@{
-    ViewBag.Title = "Create";
-}
 
-<h2>Create</h2>
-<form action="/Student/Create" method="post">
+<h2>Edit</h2>
+<form action="/Student/Edit" method="post">
     Name: <input type="text" class="form-control" value="@Model.Name" name="Name" />
 
     @Html.ValidationMessageFor(m => m.Name, "", new { @class = "text-danger" })
